[package]
name = "udp_uploader"
version = "0.1.0"
authors = ["Christopher Pearson <kermit4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = ">=0.0.0"
bit-vec = ">=0.0.0"
bincode = ">=0.0.0"
serde = { version = ">=0.0.0" , features = ["derive"] }
serde-big-array = ">=0.0.0"
